--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
         <option value="Dropdown item 3">Dropdown item 3</option>
       </select>
 
+      <label for="choices-single-no-hover">Without Item Select Hover</label>
+      <select class="form-control" name="choices-single-no-hover" id="choices-single-no-hover">
+        <option value="No Hover 1">No Hover 1</option>
+        <option value="No Hover 2">No Hover 2</option>
+        <option value="No Hover 3">No Hover 3</option>
+      </select>
+
       <p><small>If the following two examples do not load, the Discogs rate limit has probably been reached. Try again later!</small></p>
 
       <label for="choices-single-remote-fetch">Options from remote source (Fetch API)</label>
@@ -376,6 +383,13 @@
 
       choicesSelect.passedElement.addEventListener('removeItem', function(event) {
         document.getElementById('message').innerHTML = 'You just removed "' + event.detail.label + '"';
+      });
+
+      var singleFetch = new Choices('#choices-single-no-hover', {
+        placeholder: true,
+        placeholderValue: 'Select...',
+        searchPlaceholderValue: 'Search...',
+        itemSelectText: ''
       });
 
       var singleFetch = new Choices('#choices-single-remote-fetch', {
