--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         document.getElementById('message').innerHTML = 'You just removed "' + event.detail.label + '"';
       });
 
-      var singleFetch = new Choices('#choices-single-no-hover', {
+      var noHover = new Choices('#choices-single-no-hover', {
         placeholder: true,
         placeholderValue: 'Select...',
         searchPlaceholderValue: 'Search...',
