Correctly remove hover text
Useful for small Choices where the hover text crowds the choices

modified:   README.md
  Update readme to tell the user they can remove the hover text
modified:   index.html
  Add new selectable-content class
modified:   assets/scripts/src/choices.js
  Add new selectable-content class and logic
modified:   assets/scripts/dist/choices.js
modified:   assets/scripts/dist/choices.js.map
modified:   assets/scripts/dist/choices.min.js
modified:   assets/styles/css/choices.css
modified:   assets/styles/css/choices.min.css
modified:   assets/styles/scss/choices.scss
  Built code

--- a/index.html
+++ b/index.html
@@ -162,12 +162,14 @@
         <option value="Dropdown item 3">Dropdown item 3</option>
       </select>
 
-      <label for="choices-single-no-hover">Without Item Select Hover</label>
-      <select class="form-control" name="choices-single-no-hover" id="choices-single-no-hover">
-        <option value="No Hover 1">No Hover 1</option>
-        <option value="No Hover 2">No Hover 2</option>
-        <option value="No Hover 3">No Hover 3</option>
-      </select>
+      <label for="choices-single-no-hover">Without Item Select Hover Text</label>
+      <div style="width: 100px">
+        <select class="form-control" name="choices-single-no-hover" id="choices-single-no-hover">
+          <option value="No Hover 1">No Hover 1</option>
+          <option value="No Hover 2">No Hover 2</option>
+          <option value="No Hover 3">No Hover 3</option>
+        </select>
+      </div>
 
       <p><small>If the following two examples do not load, the Discogs rate limit has probably been reached. Try again later!</small></p>
 
