--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
       var boroughs = new Choices(document.getElementById('boroughs')).disable();
 
-      resetSimple = new Choices(document.getElementById('reset-simple'));
+      var resetSimple = new Choices(document.getElementById('reset-simple'));
 
       var resetMultiple = new Choices('#reset-multiple', {
         removeItemButton: true,
