Test updates, Changed callback name to more clearly distinguish it's function

--- a/public/test/text.html
+++ b/public/test/text.html
@@ -126,7 +126,7 @@
         });
 
         new Choices('#choices-add-item-callback', {
-          callbackOnAddItem: function (value) {
+          callbackFilterAddItem: function (value) {
             return (value !== 'test')
           }
         });
