Removed parseJSON on customProperties
customProperties options has an obj value with description and whatever is
written on data attr custom property.

--- a/public/index.html
+++ b/public/index.html
@@ -231,10 +231,10 @@
 
       <label for="choices-with-custom-props-via-html">Option searchable by custom properties via <code>data-custom-properties</code> attribute</label>
       <p><small>Try searching for 'fantastic', again</small>
-      <select class="form-control" id="choices-with-custom-props-via-html" placeholder="Fuck">
+      <select class="form-control" id="choices-with-custom-props-via-html">
         <option value="Dropdown item 1">Label One</option>
         <option value="Dropdown item 2" selected disabled>Label Two</option>
-        <option value="Dropdown item 2" data-custom-properties='{"description": "This option is fantastic"}'>Label Three</option>
+        <option value="Dropdown item 3" data-custom-properties='This option is fantastic'>Label Three</option>
       </select>
 
       <label for="choices-single-no-sorting">Options without sorting</label>
