Updated filter item callback name to be addItemFilter

--- a/public/test/text.html
+++ b/public/test/text.html
@@ -126,7 +126,7 @@
         });
 
         new Choices('#choices-add-item-callback', {
-          callbackFilterAddItem: function (value) {
+          addItemFilter: function (value) {
             return (value !== 'test')
           }
         });
