--- a/public/index.html
+++ b/public/index.html
@@ -344,7 +344,15 @@
 
       var textEmailFilter = new Choices('#choices-text-email-filter', {
         editItems: true,
-        regexFilter: /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+        addItemFilterFn: (value) => {
+          if (!value) {
+            return false;
+          }
+
+          const regex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
+          const expression = new RegExp(regex.source, 'i');
+          return expression.test(value);
+        },
       }).setValue(['joe@bloggs.com']);
 
       var textDisabled = new Choices('#choices-text-disabled', {
