--- a/public/test/text.html
+++ b/public/test/text.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="section">
         <h2>Text inputs</h2>
-        <!-- <div data-test-hook="basic">
+        <div data-test-hook="basic">
           <label for="choices-basic">Basic</label>
           <input class="form-control" id="choices-basic" type="text">
         </div>
@@ -37,14 +37,14 @@
         <div data-test-hook="edit-items">
           <label for="choices-edit-items">Edit items</label>
           <input class="form-control" id="choices-edit-items" type="text">
-        </div> -->
+        </div>
 
         <div data-test-hook="remove-button">
           <label for="choices-remove-button">Remove button</label>
-          <input class="form-control" id="choices-remove-button" select="mutiple" type="text">
+          <input class="form-control" id="choices-remove-button" type="text">
         </div>
 
-        <!-- <div data-test-hook="unique-values">
+        <div data-test-hook="unique-values">
           <label for="choices-unique-values">Unique values</label>
           <input class="form-control" id="choices-unique-values" type="text">
         </div>
@@ -89,18 +89,74 @@
             <label for="choices-within-form">Within form</label>
             <input class="form-control" id="choices-within-form" type="text">
           </form>
-        </div> -->
+        </div>
+
+        <div data-test-hook="multiple">
+          <form>
+            <label for="choices-multiple">Select</label>
+            <input class="form-control" id="choices-multiple" select="multiple" type="text">
+          </form>
+        </div>
       </div>
     </div>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
-        // new Choices('#choices-basic');
-        //
-        // new Choices('#choices-edit-items', {
-        //   editItems: true,
-        // });
+        new Choices('#choices-basic');
+
+        new Choices('#choices-edit-items', {
+          editItems: true,
+        });
 
         new Choices('#choices-remove-button', {
+          removeItemButton: true,
+        });
+
+        new Choices('#choices-unique-values', {
+          duplicateItemsAllowed: false,
+        });
+
+        new Choices('#choices-input-limit', {
+          maxItemCount: 5,
+        });
+
+        new Choices('#choices-add-item-filter', {
+          addItems: true,
+          addItemFilterFn: (value) => {
+            const regex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
+            const expression = new RegExp(regex.source, 'i');
+            return expression.test(value);
+          },
+        });
+
+        new Choices('#choices-adding-items-disabled', {
+          addItems: false,
+        });
+
+        new Choices('#choices-disabled-via-attr');
+
+        new Choices('#choices-prepend-append', {
+          prependValue: 'before-',
+          appendValue: '-after',
+        });
+
+        new Choices('#choices-prepopulated', {
+          items: ['Josh Johnson', {
+            value: 'joe@bloggs.co.uk',
+            label: 'Joe Bloggs',
+            customProperties: {
+              description: 'Joe Blogg is such a generic name',
+            }
+          }],
+        });
+
+        new Choices('#choices-placeholder', {
+          placeholder: true,
+          placeholderValue: 'I am a placeholder',
+        });
+
+        new Choices('#choices-within-form');
+
+        new Choices('#choices-multiple', {
           removeItemButton: true,
           choices: [
             'Girls',
@@ -108,51 +164,6 @@
             'Skirts'
           ]
         });
-
-        // new Choices('#choices-unique-values', {
-        //   duplicateItemsAllowed: false,
-        // });
-        //
-        // new Choices('#choices-input-limit', {
-        //   maxItemCount: 5,
-        // });
-        //
-        // new Choices('#choices-add-item-filter', {
-        //   addItems: true,
-        //   addItemFilterFn: (value) => {
-        //     const regex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/
-        //     const expression = new RegExp(regex.source, 'i');
-        //     return expression.test(value);
-        //   },
-        // });
-        //
-        // new Choices('#choices-adding-items-disabled', {
-        //   addItems: false,
-        // });
-        //
-        // new Choices('#choices-disabled-via-attr');
-        //
-        // new Choices('#choices-prepend-append', {
-        //   prependValue: 'before-',
-        //   appendValue: '-after',
-        // });
-        //
-        // new Choices('#choices-prepopulated', {
-        //   items: ['Josh Johnson', {
-        //     value: 'joe@bloggs.co.uk',
-        //     label: 'Joe Bloggs',
-        //     customProperties: {
-        //       description: 'Joe Blogg is such a generic name',
-        //     }
-        //   }],
-        // });
-        //
-        // new Choices('#choices-placeholder', {
-        //   placeholder: true,
-        //   placeholderValue: 'I am a placeholder',
-        // });
-        //
-        // new Choices('#choices-within-form');
       });
     </script>
   </body>
