Fix input initial bug

--- a/public/test/text.html
+++ b/public/test/text.html
@@ -94,7 +94,7 @@
         <div data-test-hook="multiple">
           <form>
             <label for="choices-multiple">Select</label>
-            <input class="form-control" id="choices-multiple" select="multiple" type="text">
+            <input class="form-control" id="choices-multiple" select="multiple" value="Girls,Skirts,Light" type="text">
           </form>
         </div>
       </div>
@@ -161,7 +161,11 @@
           choices: [
             'Girls',
             'Boys',
-            'Skirts'
+            'Skirts',
+            'Blue',
+            'White',
+            'Black',
+            'Dress'
           ]
         });
       });
