Add support for standard-compliant placeholder option

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
       <h2>Single select input</h2>
       <label for="choices-single-default">Default</label>
       <select class="form-control" data-trigger name="choices-single-default" id="choices-single-default" placeholder="This is a search placeholder">
-        <option placeholder>This is a placeholder</option>
+        <option value="">This is a placeholder</option>
         <option value="Choice 1">Choice 1</option>
         <option value="Choice 2">Choice 2</option>
         <option value="Choice 3">Choice 3</option>
@@ -167,12 +167,12 @@
 
       <label for="choices-single-remote-fetch">Options from remote source (Fetch API)</label>
       <select class="form-control" name="choices-single-remote-fetch" id="choices-single-remote-fetch">
-        <option placeholder>Pick an Arctic Monkeys' record</option>
+        <option value="">Pick an Arctic Monkeys' record</option>
       </select>
 
       <label for="choices-single-remove-xhr">Options from remote source (XHR) &amp; remove button</label>
       <select class="form-control" name="choices-single-remove-xhr" id="choices-single-remove-xhr">
-        <option placeholder>Pick a Smiths' record</option>
+        <option value="">Pick a Smiths' record</option>
       </select>
 
       <label for="choices-single-groups">Option groups</label>
