Update incorrect 'label-for' in demo index.html file.

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
         <option value="Choice 4" disabled>Choice 4</option>
       </select>
 
-      <label for="label-event">Use label in event (add/remove)</label>
+      <label for="choices-multiple-labels">Use label in event (add/remove)</label>
       <p id="message"></p>
       <select id="choices-multiple-labels" multiple></select>
       <hr>
