Remove versioning from index file

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Ignore these -->
-  <link rel="stylesheet" href="assets/styles/base.min.css?version=7.0.2">
+  <link rel="stylesheet" href="assets/styles/base.min.css">
   <!-- End ignore these -->
 
   <!-- Optional includes -->
@@ -24,8 +24,8 @@
   <!-- End optional includes -->
 
   <!-- Choices includes -->
-  <link rel="stylesheet" href="assets/styles/choices.min.css?version=7.0.2">
-  <script src="assets/scripts/choices.min.js?version=7.0.2"></script>
+  <link rel="stylesheet" href="assets/styles/choices.min.css">
+  <script src="assets/scripts/choices.min.js"></script>
   <!-- End Choices includes -->
 
   <!--[if lt IE 9]>
