Re-add generic examples to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -548,6 +548,15 @@
     </div>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
+        var genericExamples = document.querySelectorAll('[data-trigger]');
+        for (i = 0; i < genericExamples.length; ++i) {
+          var element = genericExamples[i];
+          new Choices(element, {
+            placeholderValue: 'This is a placeholder set in the config',
+            searchPlaceholderValue: 'This is a search placeholder',
+          });
+        }
+
         var textRemove = new Choices(
           document.getElementById('choices-text-remove-button'),
           {
