--- a/public/test/select-one/index.html
+++ b/public/test/select-one/index.html
@@ -181,6 +181,38 @@
           </select>
         </div>
 
+        <div data-test-hook="placeholder">
+          <label for="choices-placeholder"
+            >Placeholder via empty option value</label
+          >
+          <select
+            class="form-control"
+            name="choices-placeholder"
+            id="choices-placeholder"
+          >
+            <option value="">I am a placeholder</option>
+            <option value="Choice 1">Choice 1</option>
+            <option value="Choice 2">Choice 2</option>
+            <option value="Choice 3">Choice 3</option>
+          </select>
+        </div>
+
+        <div data-test-hook="placeholder-legacy">
+          <label for="choices-placeholder-legacy"
+            >Placeholder via option attribute</label
+          >
+          <select
+            class="form-control"
+            name="choices-placeholder-legacy"
+            id="choices-placeholder-legacy"
+          >
+            <option placeholder>I am a placeholder</option>
+            <option value="Choice 1">Choice 1</option>
+            <option value="Choice 2">Choice 2</option>
+            <option value="Choice 3">Choice 3</option>
+          </select>
+        </div>
+
         <div data-test-hook="remote-data">
           <label for="choices-remote-data">Remote data</label>
           <select
@@ -363,6 +395,10 @@
         new Choices('#choices-search-floor', {
           searchFloor: 5,
         });
+
+        new Choices('#choices-placeholder');
+
+        new Choices('#choices-placeholder-legacy');
 
         new Choices('#choices-remote-data', {
           shouldSort: false,
