Resolve broken e2e test

--- a/public/test/select-multiple/index.html
+++ b/public/test/select-multiple/index.html
@@ -239,7 +239,7 @@
             id="choices-remote-data"
             multiple
           >
-            <option value="">Placeholder</option>
+            <option value="">I am a placeholder</option>
           </select>
         </div>
 
