--- a/public/test/select-one/index.html
+++ b/public/test/select-one/index.html
@@ -220,7 +220,7 @@
             name="choices-remote-data"
             id="choices-remote-data"
           >
-            <option value="">Placeholder</option>
+            <option value="">I am a placeholder</option>
           </select>
         </div>
 
