Apply suggestions from code review

--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
           placeholder="This is a placeholder"
           multiple
         >
-          <option value="">Pick a country</option>
+          <option value="">Choose a city</option>
           <optgroup label="UK">
             <option value="London">London</option>
             <option value="Manchester">Manchester</option>
@@ -338,7 +338,7 @@
           name="choices-single-groups"
           id="choices-single-groups"
         >
-          <option value="">Pick a country</option>
+          <option value="">Choose a city</option>
           <optgroup label="UK">
             <option value="London">London</option>
             <option value="Manchester">Manchester</option>
